mksc/testcases/compile/fail/class_4.mks
# compile fail
# dupricate method
class A
	def method()
	end

	def method(arg1, arg2)
	end
end
